WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110470
[GTK][AC] Animating layer disappears while running with clutter backend
https://bugs.webkit.org/show_bug.cgi?id=110470
Summary
[GTK][AC] Animating layer disappears while running with clutter backend
ChangSeok Oh
Reported
2013-02-21 07:31:16 PST
'Toss' & 'fade through' demo in
http://www.apple.com/html5/showcase/transitions/
don't run well. Nothing is shown while animation.
Attachments
Patch
(4.30 KB, patch)
2013-02-22 10:24 PST
,
ChangSeok Oh
gustavo
: review+
gustavo
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.97 KB, patch)
2013-03-28 02:32 PDT
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
Patch
(5.04 KB, patch)
2013-03-28 03:04 PDT
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2013-02-22 10:24:57 PST
Created
attachment 189790
[details]
Patch
ChangSeok Oh
Comment 2
2013-03-22 13:34:37 PDT
This patch applied to webkit-clutter as well.
http://cgit.collabora.com/git/webkit-clutter.git/commit/?h=wip/changseok/unreviewed&id=fcd8e7cd47f2a0b68110fd709ccf9919cb84c11c
Gustavo Noronha (kov)
Comment 3
2013-03-27 10:10:09 PDT
Comment on
attachment 189790
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189790&action=review
I could not reproduce this problem in webkit-clutter. I guess it might be a bad interaction with clutter-gtk. The change makes sense anyway. Please merge this change to webkit-clutter master as well! cq- because of the requested changes.
> Source/WebCore/platform/graphics/clutter/GraphicsLayerClutter.cpp:656 > + GraphicsLayerClutter* curChild = static_cast<GraphicsLayerClutter*>(childLayers[i]);
Let's take the opportunity to fix the naming here, curChild -> currentChild
> Source/WebCore/platform/graphics/clutter/GraphicsLayerClutter.cpp:658 > + g_assert(GRAPHICS_LAYER_IS_ACTOR(childLayer));
Make this an ASSERT() instead.
ChangSeok Oh
Comment 4
2013-03-28 02:32:31 PDT
Created
attachment 195508
[details]
Patch
ChangSeok Oh
Comment 5
2013-03-28 03:04:44 PDT
Created
attachment 195514
[details]
Patch
ChangSeok Oh
Comment 6
2013-03-28 08:31:58 PDT
Comment on
attachment 189790
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189790&action=review
Thank you for the review!
>> Source/WebCore/platform/graphics/clutter/GraphicsLayerClutter.cpp:656 >> + GraphicsLayerClutter* curChild = static_cast<GraphicsLayerClutter*>(childLayers[i]); > > Let's take the opportunity to fix the naming here, curChild -> currentChild
Done.
>> Source/WebCore/platform/graphics/clutter/GraphicsLayerClutter.cpp:658 >> + g_assert(GRAPHICS_LAYER_IS_ACTOR(childLayer)); > > Make this an ASSERT() instead.
Done.
ChangSeok Oh
Comment 7
2013-03-28 08:33:47 PDT
(In reply to
comment #3
)
> (From update of
attachment 189790
[details]
) > Please merge this change to webkit-clutter master as well! cq- because of the requested changes.
Yeap. I'll do immediately after landing this patch!
WebKit Review Bot
Comment 8
2013-03-28 08:58:22 PDT
Comment on
attachment 195514
[details]
Patch Clearing flags on attachment: 195514 Committed
r147121
: <
http://trac.webkit.org/changeset/147121
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug